--- a/accounts.html
+++ b/accounts.html
@@ -1,113 +1,127 @@
-<!-- FULL accounts.html with fixes -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>VOID — Accounts</title>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>VOID — Accounts</title>
   <style>
     body {
       margin: 0;
+      font-family: Arial, sans-serif;
       background-color: black;
       color: white;
-      font-family: Arial, sans-serif;
-      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
     header {
-      font-size: 32px;
+      width: 100%;
       padding: 20px;
+      text-align: center;
       background-color: #111;
-      border-bottom: 1px solid #333;
+      font-size: 28px;
+      font-weight: bold;
+      border-bottom: 1px solid #444;
     }
 
-    #formContainer, #profileView, #editProfileSection {
-      max-width: 400px;
-      margin: auto;
-      display: none;
-    }
-
-    input, textarea, button {
+    #formContainer {
+      margin-top: 30px;
       width: 90%;
+      max-width: 400px;
+    }
+
+    input, textarea {
+      width: 100%;
       padding: 10px;
-      margin: 8px 0;
-      background-color: #111;
-      border: 1px solid #333;
+      margin: 5px 0;
+      background: #111;
       color: white;
+      border: 1px solid #444;
+      border-radius: 4px;
     }
 
     button {
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+      background: #333;
+      color: white;
+      border: none;
       cursor: pointer;
-      background-color: #333;
     }
 
     button:hover {
-      background-color: #555;
+      background: #555;
     }
 
-    #toggleContainer {
-      margin-top: 20px;
-    }
-
-    img.profile-pic {
-      width: 200px;
-      height: 200px;
-      object-fit: cover;
+    #toggleLink {
+      text-align: center;
+      margin-top: 15px;
+      color: #aaa;
       cursor: pointer;
     }
 
-    #verifyMessage {
-      color: orange;
+    #profileView, #editProfileSection {
+      display: none;
+      margin-top: 20px;
+    }
+
+    #profileImage {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 2px solid #555;
       margin-bottom: 10px;
     }
+
+    #editBtn {
+      margin-top: 10px;
+    }
   </style>
-  <!-- Firebase SDK -->
+
   <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-database-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-storage-compat.js"></script>
 </head>
 <body>
-  <header>VOID — ACCOUNTS</header>
-
-  <div id="verifyMessage"></div>
+  <header>VOID — Accounts</header>
 
   <div id="formContainer">
-    <div id="toggleContainer">
-      <button onclick="showLogin()">Login</button>
-      <button onclick="showSignup()">Sign Up</button>
+    <div id="authSection">
+      <input type="email" id="email" placeholder="Email">
+      <input type="password" id="password" placeholder="Password">
+      <button id="loginBtn">Login</button>
+      <div id="toggleLink">Don't have an account? Sign up</div>
     </div>
 
-    <div id="loginForm">
-      <input type="email" id="loginEmail" placeholder="Email">
-      <input type="password" id="loginPassword" placeholder="Password">
-      <button onclick="login()">Login</button>
-    </div>
-
-    <div id="signupForm" style="display:none;">
+    <div id="signupSection" style="display:none;">
       <input type="email" id="signupEmail" placeholder="Email">
-      <input type="text" id="signupUsername" placeholder="Username">
-      <input type="password" id="signupPassword" placeholder="Password (min 8 chars)">
-      <button onclick="signup()">Sign Up</button>
+      <input type="password" id="signupPassword" placeholder="Password">
+      <button id="signupBtn">Sign Up</button>
+      <div id="toggleLink">Already have an account? Login</div>
     </div>
   </div>
 
-  <div id="profileView">
-    <img id="profilePicDisplay" class="profile-pic" onclick="toggleFullSize()" />
-    <h2 id="profileUsername"></h2>
-    <p id="profileBio"></p>
-    <p id="profileAgeGender"></p>
-    <button onclick="showEditProfile()">Edit Profile</button>
+  <div id="verifyNotice" style="display:none; margin-top: 20px; text-align:center;">
+    Please verify your email to unlock full access.
+  </div>
+
+  <div id="profileView" style="text-align:center;">
+    <img id="profileImage" src="" alt="Profile Picture">
+    <div id="profileInfo"></div>
+    <button id="editBtn">Edit Profile</button>
   </div>
 
   <div id="editProfileSection">
-    <input type="text" id="editUsername" placeholder="Username">
-    <textarea id="editBio" placeholder="Bio"></textarea>
-    <input type="number" id="editAge" placeholder="Age">
-    <input type="text" id="editGender" placeholder="Gender">
-    <input type="file" id="editPicInput">
-    <button onclick="saveProfile()">Save Profile</button>
-    <button onclick="cancelEdit()">Cancel</button>
+    <input type="text" id="name" placeholder="Name">
+    <input type="number" id="age" placeholder="Age">
+    <input type="text" id="gender" placeholder="Gender">
+    <textarea id="bio" placeholder="Bio"></textarea>
+    <input type="file" id="profilePicInput" accept="image/*">
+    <button id="saveProfileBtn">Save Profile</button>
   </div>
 
   <script>
@@ -122,147 +136,117 @@
       measurementId: "G-78DGNW8HV3"
     };
     firebase.initializeApp(firebaseConfig);
-
     const auth = firebase.auth();
     const db = firebase.database();
     const storage = firebase.storage();
 
-    const formContainer = document.getElementById("formContainer");
-    const profileView = document.getElementById("profileView");
-    const editSection = document.getElementById("editProfileSection");
-    const verifyMessage = document.getElementById("verifyMessage");
+    const loginBtn = document.getElementById("loginBtn");
+    const signupBtn = document.getElementById("signupBtn");
+    const editBtn = document.getElementById("editBtn");
+    const saveProfileBtn = document.getElementById("saveProfileBtn");
 
-    function showLogin() {
-      document.getElementById("loginForm").style.display = "block";
-      document.getElementById("signupForm").style.display = "none";
-    }
+    const authSection = document.getElementById("authSection");
+    const signupSection = document.getElementById("signupSection");
+    const toggleLinks = document.querySelectorAll("#toggleLink");
 
-    function showSignup() {
-      document.getElementById("loginForm").style.display = "none";
-      document.getElementById("signupForm").style.display = "block";
-    }
+    toggleLinks.forEach(link => {
+      link.onclick = () => {
+        authSection.style.display = authSection.style.display === "none" ? "block" : "none";
+        signupSection.style.display = signupSection.style.display === "none" ? "block" : "none";
+      };
+    });
 
-    function signup() {
+    signupBtn.onclick = () => {
       const email = document.getElementById("signupEmail").value;
-      const username = document.getElementById("signupUsername").value;
       const password = document.getElementById("signupPassword").value;
-
-      if (password.length < 8 || username.length < 6) {
-        alert("Password must be at least 8 characters and username at least 6.");
-        return;
-      }
-
-      auth.createUserWithEmailAndPassword(email, password).then(cred => {
-        cred.user.sendEmailVerification();
-        db.ref("users/" + cred.user.uid).set({
-          email,
-          username,
-          bio: "",
-          age: "",
-          gender: "",
-          profilePic: ""
-        });
+      auth.createUserWithEmailAndPassword(email, password).then(user => {
+        user.user.sendEmailVerification();
+        alert("Verification email sent.");
       });
-    }
+    };
 
-    function login() {
-      const email = document.getElementById("loginEmail").value;
-      const password = document.getElementById("loginPassword").value;
-      auth.signInWithEmailAndPassword(email, password);
-    }
+    loginBtn.onclick = () => {
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+      auth.signInWithEmailAndPassword(email, password).catch(console.error);
+    };
 
     auth.onAuthStateChanged(user => {
       if (user) {
+        document.getElementById("formContainer").style.display = "none";
         if (!user.emailVerified) {
-          verifyMessage.innerText = "Please verify your email for full access.";
+          document.getElementById("verifyNotice").style.display = "block";
         } else {
-          verifyMessage.innerText = "";
+          loadProfile(user.uid);
         }
-        formContainer.style.display = "none";
-        loadProfile(user.uid);
-      } else {
-        formContainer.style.display = "block";
-        profileView.style.display = "none";
-        editSection.style.display = "none";
       }
     });
 
     function loadProfile(uid) {
-      db.ref("users/" + uid).once("value").then(snapshot => {
+      document.getElementById("profileView").style.display = "block";
+      db.ref("users/" + uid).once("value", snapshot => {
         const data = snapshot.val();
-        document.getElementById("profileUsername").innerText = data.username;
-        document.getElementById("profileBio").innerText = data.bio;
-        document.getElementById("profileAgeGender").innerText = `${data.age || ''} ${data.gender || ''}`;
-        document.getElementById("profilePicDisplay").src = data.profilePic || "https://via.placeholder.com/200";
-        profileView.style.display = "block";
+        document.getElementById("profileInfo").innerHTML = `
+          <div><strong>Name:</strong> ${data?.name || ''}</div>
+          <div><strong>Age:</strong> ${data?.age || ''}</div>
+          <div><strong>Gender:</strong> ${data?.gender || ''}</div>
+          <div><strong>Bio:</strong> ${data?.bio || ''}</div>
+        `;
+        if (data?.profilePicUrl) {
+          document.getElementById("profileImage").src = data.profilePicUrl;
+        }
       });
     }
 
-    function showEditProfile() {
-      profileView.style.display = "none";
-      editSection.style.display = "block";
-      const uid = auth.currentUser.uid;
-      db.ref("users/" + uid).once("value").then(snapshot => {
-        const data = snapshot.val();
-        document.getElementById("editUsername").value = data.username;
-        document.getElementById("editBio").value = data.bio;
-        document.getElementById("editAge").value = data.age;
-        document.getElementById("editGender").value = data.gender;
-      });
-    }
+    editBtn.onclick = () => {
+      document.getElementById("profileView").style.display = "none";
+      document.getElementById("editProfileSection").style.display = "block";
+    };
 
-    function cancelEdit() {
-      editSection.style.display = "none";
-      profileView.style.display = "block";
-    }
+    saveProfileBtn.onclick = async () => {
+      const user = auth.currentUser;
+      if (!user) return;
 
-    function saveProfile() {
-      const uid = auth.currentUser.uid;
-      const username = document.getElementById("editUsername").value;
-      const bio = document.getElementById("editBio").value;
-      const age = document.getElementById("editAge").value;
-      const gender = document.getElementById("editGender").value;
-      const file = document.getElementById("editPicInput").files[0];
+      const name = document.getElementById("name").value;
+      const age = document.getElementById("age").value;
+      const gender = document.getElementById("gender").value;
+      const bio = document.getElementById("bio").value;
+      const file = document.getElementById("profilePicInput").files[0];
 
-      const updateData = { username, bio, age, gender };
+      let profilePicUrl = "";
 
       if (file) {
+        const img = await resizeImage(file, 200, 200);
+        const storageRef = storage.ref("profilePics/" + user.uid + ".jpg");
+        await storageRef.put(img);
+        profilePicUrl = await storageRef.getDownloadURL();
+      }
+
+      db.ref("users/" + user.uid).set({ name, age, gender, bio, profilePicUrl }).then(() => {
+        loadProfile(user.uid);
+        document.getElementById("editProfileSection").style.display = "none";
+        document.getElementById("profileView").style.display = "block";
+      });
+    };
+
+    function resizeImage(file, maxWidth, maxHeight) {
+      return new Promise(resolve => {
+        const img = new Image();
+        const canvas = document.createElement("canvas");
         const reader = new FileReader();
-        reader.onload = function (e) {
-          const img = new Image();
-          img.src = e.target.result;
-          img.onload = function () {
-            const canvas = document.createElement("canvas");
-            canvas.width = 200;
-            canvas.height = 200;
+
+        reader.onload = e => {
+          img.onload = () => {
             const ctx = canvas.getContext("2d");
-            ctx.drawImage(img, 0, 0, 200, 200);
-            canvas.toBlob(function (blob) {
-              const ref = storage.ref("profilePics/" + uid + ".jpg");
-              ref.put(blob).then(snapshot => {
-                ref.getDownloadURL().then(url => {
-                  updateData.profilePic = url;
-                  db.ref("users/" + uid).update(updateData).then(() => {
-                    editSection.style.display = "none";
-                    loadProfile(uid);
-                  });
-                });
-              });
-            }, "image/jpeg");
+            canvas.width = maxWidth;
+            canvas.height = maxHeight;
+            ctx.drawImage(img, 0, 0, maxWidth, maxHeight);
+            canvas.toBlob(resolve, "image/jpeg");
           };
+          img.src = e.target.result;
         };
         reader.readAsDataURL(file);
-      } else {
-        db.ref("users/" + uid).update(updateData).then(() => {
-          editSection.style.display = "none";
-          loadProfile(uid);
-        });
-      }
-    }
-
-    function toggleFullSize() {
-      const img = document.getElementById("profilePicDisplay");
-      img.classList.toggle("fullsize");
+      });
     }
   </script>
 </body>
